[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lbk_library"
authors = [
    {name = "Lorn B Kerr", email = "lornburtkerr@gmail.com"},
]
description = "A Personal Project Support Library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Development Status :: 4 - Beta",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: Microsoft :: Windows :: Windows 10",
]
dynamic = ["version"]


[tool.isort]
profile = 'black'
multi_line_output = 3
src_paths = './src/*'

[tool.flake8]
max-line-length = 88
filename = '*.py'
exclude = ['*git', '__pycache__', 'docs', 'build', 'dist', ' *venv', 'pending', 'tests']
ignore = ['F841', 'W503']
per-file-ignores = '__init__.py:F401'

[tool.setuptools_scm]
write_to = "src/lbk_library/_version.py"
